# Additional-Ed

./: .gitignore
Application/: Application.sln  Application.tss
Application/Application/: AddEllipseCommand.cpp  AddEllipseCommand.h  AddRectangleCommand.cpp  AddRectangleCommand.h  AddShapeCommand.cpp  AddShapeCommand.h  AddTriangleCommand.cpp  AddTriangleCommand.h  AppConsts.h  Application.cpp  Application.h  Application.vcxproj  Application.vcxproj.filters  ApplicationController.cpp  ApplicationController.h  ApplicationModel.cpp  ApplicationModel.h  ApplicationView.cpp  ApplicationView.h  BoundsObservable.h  BoundsObserver.h  ButtonClickObservable.h  ButtonClickObserver.h  ButtonsConsts.h  Canvas.cpp  Canvas.h  CanvasClickObservable.h  CanvasClickObserver.h  Command.h  DeleteShapeCommand.cpp  DeleteShapeCommand.h  DomainModel.cpp  DomainModel.h  EllipseShape.h  Frame.cpp  Frame.h  Header.h  IShapeOwner.h  ImageButton.cpp  ImageButton.h  (+24 more)
Lab1/Compare/: Replace.sln  Replace.tss
Lab1/Compare/Replace/: Compare.cpp  Compare.h  Replace.vcxproj  Replace.vcxproj.filters  file1.txt  main.cpp
Lab1/Invert/: Invert.sln  Invert.tss
Lab1/Invert/Invert/: Invert.cpp  Invert.vcxproj  Invert.vcxproj.filters  InvertMatrix.cpp  InvertMatrix.h  errInput2.txt
Lab1/Invert/InvertTest/: InvertFunctionsTest.cpp  InvertTest.cpp  InvertTest.vcxproj  InvertTest.vcxproj.filters  ReadMe.txt  errInput3.txt  stdafx.cpp  stdafx.h
Lab1/Radix/: Radix.sln  Radix.tss
Lab1/Radix/Radix/: Radix.vcxproj  Radix.vcxproj.filters  ReadMe.txt  Transfer.cpp  Transfer.h  main.cpp  stdafx.cpp
Lab1/Radix/RadixTests/: RadixTests.cpp  RadixTests.vcxproj  RadixTests.vcxproj.filters  (+4 more)
Lab2/Dictionary/: Dictionary.sln  Dictionary.tss
Lab2/HtmlEncode/: HtmlEncode.sln  HtmlEncode.tss
Lab2/PrimeNumbers/: PrimeNumbers.sln
Lab2/VectorTransform/: VectorTransform.sln  VectorTransform.tss
Lab3/Calc/: CMakeLists.txt
Lab3/Calc/Calculator/: CFunction.cpp  CFunction.h  CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorUI.cpp  CalculatorUI.h  Value.cpp  Value.h  main.cpp  stdafx.cpp  stdafx.h
Lab3/Calc/CalculatorTests/: CMakeLists.txt  CalculatorTests.cpp
Lab3/Calculator/: Calculator.sln
Lab4/ShapeHierarchy/: ShapeHierarchy.sln
Lab4/VolumeBodies/: VolumeBodies.sln
Lab5/String/: String.sln
Lab6/HttpUrl/: HttpUrl.sln
Lab6/StringList/: CMakeLists.txt
Lab6/StringList/StringListTests/: CMakeLists.txt  StringListTests.cpp
MLITA/Digits/: Digits.sln  Digits.tss
MLITA/ExpressionConverter/: ExpressionConverter.sln
MLITA/Random/: Random.sln  Random.tss
MLITA/Relicts/: Relicts.sln  Relicts.tss
MLITA/Squares/: Squares.sln  Squares.tss
MLITA/TriangleAndPoint/: TriangleAndPoint.sln
MLITA/VisualCheckers/: VisualCheckers.sln
MLITA/practice2Gryadki/: practice2Gryadki.sln  practice2Gryadki.tss
OOD/observer/: observer.sln
SimpleGame/: build.gradle
SimpleGame/android/: AndroidManifest.xml  build.gradle
lab7/FindMaxEx/: CMakeLists.txt  MathUtils.h  main.cpp
lab7/FindMaxEx/FindMaxTests/: CMakeLists.txt  FindMaxTests.cpp
lab7/StringList/StringList/: CMakeLists.txt  StringList.cpp  StringList.h  StringListIterator.h  main.cpp  stdafx.cpp  stdafx.h
lab7/TemplatedStringList/: CMakeLists.txt
lab7/TemplatedStringList/StringList/StringList/: CMakeLists.txt  StringList.cpp  StringList.h
strategy/: strategy.sln
strategy/SimUDuck/: SimUDuck.cpp
(+365 files in other folders)
